# BabbleOn

./: CMakeLists.txt  LICENSE  README.md
BabbleOnClient2_newest/: nbactions.xml  pom.xml
BabbleOnClient2_newest/src/main/java/protocol/: ACKMessage.java  BabbleException.java  BabbleOnMessage.java  ChallengeMessage.java  Errors.java  KeyType.java  LoginMessage.java  MessageType.java  MsgMessage.java  PollMessage.java  PollResponseMessage.java  ResponseMessage.java  logoutMessage.java
BabbleOnClient2_newest/src/main/java/securityjavaclient/: BabbleOnClient.java  PasswordPane.java  PollThread.java  ReaderThread.java
database/: chatserver.mwb  dbscript.sql
mockServer/: CMakeLists.txt  MockServer.cpp  PracticalSocket.cpp  PracticalSocket.h  Sha256Lib.h  SurveyCommon.cpp  SurveyCommon.h
mockServer/protocol/: SPChatACK.cpp  SPChatACK.h  SPChatChallenge.cpp  SPChatChallenge.h  SPChatException.cpp  SPChatException.h  SPChatLogin.cpp  SPChatLogin.h  SPChatMessage.cpp  SPChatMessage.h  SPChatMsgMessage.cpp  SPChatMsgMessage.h  SPChatPoll.cpp  SPChatPoll.h  SPChatPollResponse.cpp  SPChatPollResponse.h  SPChatResponse.cpp  SPChatResponse.h
